# packet-inspector

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  OptionHandler.cpp  OptionHandler.h  PacketInspector.cpp  Session.cpp  Session.h  SessionCollection.cpp  SessionCollection.h  Singleton.h  main.cpp
src/Capturer/: CMakeLists.txt  CapturerBase.h  XdpCapturer.cpp  XdpCapturer.h
src/Headers/: Ethernet.h  Ip.h  Tcp.h  Udp.h  VlanTag.h
src/Resources/: CMakeLists.txt  DpdkResourceManager.cpp  DpdkResourceManager.h
src/SessionManagement/: Session.h  SessionCollection.cpp  SessionCollection.h
src/Utilities/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
src/Utilities/Patterns/: CMakeLists.txt  Singleton.h
src/Worker/ProtocolHeaders/: Tcp.h  VlanTag.h
